# chess_rs

./: Cargo.toml  eslint.config.js  justfile  package.json  vite.config.js
src/: board.rs  board_hash.rs  lib.rs  lib.ts  lib_c.rs  main.rs  notation.rs  piece.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: bitboard.rs  board.rs  board_hash.rs  lib.rs  main.rs  notation.rs  piece.rs  tauri.rs
src/components/: board.svelte  piece.svelte
src/routes/: +page.svelte
