[package]
name = "chess-rs"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "chess_rs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
tauri = { version = "2.8.5", features = [] }
tauri-plugin-opener = "2.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
bitflags = "2.9.4"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
strip = true
